public/css/dashboard.css
.clientSelector {
    height: 100%;
    width: 75%;
    align-content: center;
    text-align-last: center;
    font-size: 48px;
    border: none;
    background-color: #F1E0C5;
}
.clientSelectorContent {
    font-size: 12pt;
}
body{
  background-color:#71816D;
}
header{
  background-color: #214936;
}
table, tr, td, th {
    border: 1px black solid;
}
table {
    width: 100%;
    background-color: #214936;
    color: #F1E0C5;
}
thead{
  color:#214936;
  font-weight: bold;
  background-color: #F1E0C5;

}
#siteTitle{
  text-align: center;
  font-weight: bold;
  font-size: 25px;
}
.siteTableRow{
  transition: 0.3s;
  background-color: #214936;
  border-color: #F1E0C5;
  color: #F1E0C5;
  border-width: 5px;
  border-radius: 5px;
  margin-bottom: 10px;
  padding: 10px;

}
.siteLAbel{
  font-weight: bold;
}
.siteTableRow:hover{
  transform: scale(1.05);
  background-color:#C9B79C;
  color: #214936;
}
div.clientDescription {
  color: #F1E0C5;
}
h3.clientDescription {
    text-align: center;
    text-weight: bold;
    color: #F1E0C5;
}
h5.clientDescription {
    text-weight: bold;
    color: #F1E0C5;
}
.desTitle{
  color: #214936;
  font-weight: bold;
}
.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
}
.tab button {
    background-color: #F1E0C5;
    color:#214936;
    font-weight: bold;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    /*width: 10%;*/
}
.tab button:hover {
    transform: scale(1.1);
    background-color:#C9B79C;
color: #214936;

}
.tab button.active {
  color: #F1E0C5;
  background-color:#214936;
}
.tabcontent {
    display: none;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
    color:#F1E0C5;
}
.activeSite {
    background-color: #F1E0C5;
    color: #214936;
}
.tabSD {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #F1E0C5;
    color:#214936;
}
.tabSD button {
  background-color: #F1E0C5;
  color:#214936;
      float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    /*width: 10%;*/
}
.tabSD button:hover {
  transform: scale(1.1);
  background-color:#C9B79C;
  color: #214936;
}
.tabSD button.active {
  color: #F1E0C5;
  background-color:#214936;}
.tabcontentSD {
    display: none;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
    background-color: #F1E0C5;

}
label {
    width: 70px;
}
input {
    width: 100% - 70px;
}
#formCommentName {
    height: 24px;
}
#formCommentText {
    height: 96px;
}

